--- a/exercicios/desafiositecordel/estilo/style.css
+++ b/exercicios/desafiositecordel/estilo/style.css
@@ -22,9 +22,9 @@ html body {
 }
 
 header {
-    background-color: black;
+    background-color: rgb(7, 72, 46);
     color: white;
-    text-align: center; 
+    text-align: center;
 }
 
 header>h1 {
@@ -33,7 +33,7 @@ header>h1 {
     font-family: var(--font2);
     font-size: 4em;
     font-size: 10vw;
-    
+
 }
 
 header>p {
@@ -44,7 +44,8 @@ section {
     padding-top: 10%;
     padding-bottom: 10%;
     line-height: 2em;
-    padding-left: 30px;font-family: var(--font3);
+    padding-left: 30px;
+    font-family: var(--font3);
     font-size: 3.5vw;
 }
 
@@ -53,16 +54,26 @@ section.normal {
     color: black;
 }
 
+section>p {
+    padding-bottom: 2em;
+}
+
 section.imagem {
     background-color: rgb(66, 71, 69);
-    color: white;
+    color: white; box-shadow: inset 6px 6px 13px 0px rgba(18, 0, 14, 0.498);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem>p {
-    background-color: rgba(0, 0, 0, 0.446);
+    background-color: rgba(1, 23, 10, 0.549);
     display: inline-block;
-    padding: 5px;
+    padding: 5px; text-shadow: 2px 2px 0px rgb(241, 194, 26) ;
 }
+
+section#img01 {background-image: url('../imagens/background001.jpg');background-position: right center;}
+
+section#img02 {background-image: url('../imagens/background002.jpg');}
 
 a {
     color: white;
