--- a/exercicios/ex025/style.css
+++ b/exercicios/ex025/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(133, 240, 239), rgb(24, 128, 151));
+    background-image: linear-gradient(to right, rgb(118, 202, 240), rgba(23, 16, 235, 0.788));
 }
 p {font-size: 1.3em;}
 h1 {
@@ -12,7 +12,7 @@ h1 {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(39, 107, 51, 0.5);
+    background-color: rgba(12, 15, 13, 0.5);
     padding: 15px;
     border-radius: 20PX;
     width: 50%;
@@ -20,19 +20,19 @@ h1 {
 }
 
 fieldset {
-    border: 3px solid rgb(6, 75, 16); padding: 20px; border-radius: 20px;
+    border: 3px solid rgb(23, 224, 53); padding: 20px; border-radius: 20px;
 }
 
 legend {
     text-align: center;
     color: rgb(11, 1, 11);
-    border: 1px solid rgb(28, 96, 60);
+    border: 1px solid rgb(70, 232, 146);
     padding:  10px;
-    background-color: rgba(9, 86, 23, 0.565);
+    background-color: rgba(51, 239, 85, 0.565);
     border-radius: 20px;
 }
 
 legend :hover {
     color: rgb(44, 246, 9);
 }
-input {font-size: 1.3em; color: black; background-color: rgba(166, 149, 242, 0.457);}
+input {font-size: 1.3em; color: black; background-color: rgba(202, 198, 221, 0.457);}
