--- a/exercicios/ex026/mq002/estilo/retrato.css
+++ b/exercicios/ex026/mq002/estilo/retrato.css
@@ -1,2 +1,6 @@
 @charset "UTF-8";
-/*aparelho em pé  - portrait*/
+
+/* CONFIGURAÇOES PARA POSIÇÃO EM PÉ - portrait */
+
+
+body {background-image: url(../imagens/cev-portrait.jpg); background-position: center, bottom;}
