--- a/exercicios/ex026/mq002/estilo/style.css
+++ b/exercicios/ex026/mq002/estilo/style.css
@@ -12,7 +12,7 @@ html,
 body {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(42, 15, 252);
+    background-color: #233eff;
     background-size: contain; background-repeat: no-repeat;
 
 }
